--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -3,11 +3,11 @@
     <h3>Day 1</h3>
     <table class="table table-striped">
       <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
+      <tr> <td>09:00</td>  <td>Automating Tasks with the <a href="https://swcarpentry.github.io/shell-novice/">Unix Shell</a> </td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>13:00</td>  <td>Building Programs with <a href="https://swcarpentry.github.io/python-novice-inflammation/">Python</a> </td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
       <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
@@ -22,7 +22,7 @@
       <tr> <td>11:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       
-      <tr> <td>13:00</td>  <td>Version Control with Git</td> </tr>
+      <tr> <td>13:00</td>  <td>Version Control with <a href="https://swcarpentry.github.io/git-novice/">Git</a> </td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
       <tr> <td>15:00</td>  <td>Version Control with Git (Continued)</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
